--- a/src/styles/entries.css
+++ b/src/styles/entries.css
@@ -19,7 +19,6 @@ h3 {
 .entry {
   margin-bottom: 0.25em;
   padding: 1rem;
-  height: 125px;
   font-size: 14px;
   background-color: #333a41;
   color: #bbd0e3;
@@ -46,22 +45,35 @@ h3 {
   color: #dceeff;
   width: 100vw;
 }
-.new-entry-container > h2 {
-  align-self: flex-start;
-  padding: 1em;
+.text-area {
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #333a41;
+  border-radius: 2px;
+  border: 1px solid #dceeff;
 }
 .text-area > textarea {
-  width: 300px;
-  height: 100%;
+  width: 50%;
+  height: 400px;
   margin: 1rem;
+  padding: 0.5rem;
   font-family: robo;
+  font-size: 16px;
   outline: none;
+  background-color: #8ba2b8;
 }
 .new-entry-form {
   padding: 2rem;
+  display: grid;
   display: flex;
-  flex-direction: row;
-  object-fit: contain;
+  flex-direction: column;
+}
+.new-entry-form > span {
+  margin: 0.5rem;
+  text-align: center;
 }
 .new-entry-form > textarea,
 .new-entry-form > input {
@@ -69,7 +81,6 @@ h3 {
   border: 3px solid #dceeff;
   border-radius: 5px;
   outline: none;
-  transition: border 0.7s;
 }
 
 .new-entry-form > textarea:focus,
@@ -80,8 +91,6 @@ h3 {
   text-align: center;
   margin: 1em;
   font-size: 1rem;
-}
-.button-group {
 }
 .code-buttons {
   display: flex;
@@ -99,27 +108,23 @@ h3 {
 }
 .code-buttons > button:hover {
   font-size: 15px;
-  transition: font-size 0.75s ease-in-out 0s;
 }
 .code-buttons > button:focus {
   background-color: #63798e;
 }
 .mood-buttons {
-  width: 100%;
+  margin: 0.25rem;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(4, 1fr);
+  align-items: center;
+  justify-items: center;
   gap: 10px;
 }
-.mood-buttons > button:hover {
-  color: #282c34;
-}
 .mood-buttons > button {
-  height: 35px;
-  width: 100%;
+  height: 75px;
+  width: 75px;
   border: none;
-  border-radius: 5px;
-  color: transparent;
-  transition: color 1s;
+  border-radius: 2px;
 }
 .mood-buttons > button:nth-child(1) {
   background-color: #63b4ff;
@@ -135,14 +140,13 @@ h3 {
 }
 /* submit button */
 .new-entry-form > button {
-  justify-self: flex-end;
-  align-self: flex-end;
-  margin: 1em 1.5em;
-  width: 30%;
+  width: 40%;
+  margin: 1em;
+  font-family: Aur;
   height: 3rem;
   border: none;
-  border-radius: 5px;
-  background-color: #63b4ff;
+  border-radius: 2px;
+  background-color: #b6cadc;
 }
 
 @media screen and (max-width: 800px) {
@@ -165,20 +169,32 @@ h3 {
   }
   .new-entry-form {
     padding: 0.25rem;
+    height: 80vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-around;
   }
   .text-area {
-    width: 100%;
+    padding: 1rem;
+    margin-bottom: 1em;
+    height: 60%;
     display: flex;
+    flex-direction: column;
+    color: #dceeff;
     justify-content: center;
     align-items: center;
-    padding: 0.25rem;
+  }
+
+  .text-area > label {
+    align-self: flex-start;
+    font-size: 1rem;
+    margin-bottom: 8px;
   }
   .text-area > textarea {
+    height: 75%;
+    width: 100%;
     margin: 0;
+
     margin: 0;
   }
   .new-entry-form > textarea,
@@ -186,15 +202,18 @@ h3 {
     outline: none;
   }
   .button-group {
-    margin: 0.25rem;
     background-color: #384450;
     padding: 1rem;
+    height: 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
   .code-buttons {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 7em;
   }
   .code-buttons > button {
     margin-bottom: 0;
@@ -204,20 +223,18 @@ h3 {
     border: none;
     border-radius: 5px;
   }
-  .code-buttons > button:focus {
-    background-color: #63798e;
-  }
+
   .mood-buttons {
-    display: grid;
-    grid-template-columns: repeat(2 1fr);
-    justify-items: center;
+    display: flex;
+    justify-content: center;
     align-items: center;
-    transition: background 1s;
+    gap: 5px;
+    height: 15%;
   }
   .mood-buttons > button {
     margin: 1rem 0.5rem;
-    height: 35px;
-
+    height: 40px;
+    width: 65px;
     border: none;
     color: #282c34;
   }
@@ -238,8 +255,9 @@ h3 {
   }
   .new-entry-form > button {
     justify-self: center;
-    align-self: center;
-    width: 90%;
-    margin: 0.25rem;
+    align-self: flex-end;
+    width: 30%;
+    height: 10%;
+    margin: 0 1rem;
   }
 }
