--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #282c34;
+  /* background-color: #24262c; */
+  background: linear-gradient(#24262c, #1f2429);
   color: #dceeff;
+}
+.app {
+  height: 100%;
 }
